- fixed css to prevent collapsing textarea on .../api/v1/tests

--- a/app/assets/stylesheets/mdtran.css
+++ b/app/assets/stylesheets/mdtran.css
@@ -134,8 +134,9 @@ td { vertical-align: top; }
     border-top: 1px solid #7c7c7c;
     color: #333;
     font-family: "Lucida Grande", Tahoma, Arial, Verdana, sans-serif;
-    font-size: 100%;
+    font-size: 80%;
     margin: 0;
     width: 99%;
-    height: 20em;
+    min-height: 12em;
+    resize: vertical;
 }
